Fix input fields stretching all the way to the edges of the panel by overriding form-horizontal, form-group bootstrap css default margin-left/margin-right from 15px to 0px.

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -11,6 +11,12 @@ img {
   font-size: inherit;
   }
 
+//override form-horizontal, form-group
+.form-horizontal .form-group {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
 // THESE ARE EXAMPLES YOU CAN MODIFY
 // create your own classes
 // to make views framework-neutral
